# atlas

./: .dockerignore  .env.example  .envrc  .eslintignore  .freight.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  Procfile  README.md  cloudbuild.yaml  conftest.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  setup.cfg
backend/: Dockerfile  __init__.py  apps.py  cloudbuild.yaml  conftest.py  pyproject.toml  root_schema.py  settings.py  urls.py  wsgi.py
backend/atlas/: __init__.py  apps.py  celery.py  cli.py  cloudbuild.yaml  constants.py  root_schema.py  settings.py  urls.py  views.py  wsgi.py
backend/atlas/factories/: __init__.py  department.py  identity.py  profile.py  team.py
backend/atlas/middleware/: auth.py
backend/atlas/migrations/: 0001_initial.py  0002_profile_handle.py  0002_profile_photo_url.py  0003_identity_is_active.py  0003_profile_primary_phone.py  0004_auto_20190711_1346.py  0004_profile_department.py  0005_auto_20190716_2034.py  0005_identity_is_admin.py  0006_auto_20190604_1904.py  0006_auto_20190717_0052.py  0007_auto_20190605_0528.py  0007_office_external_id.py  0008_auto_20190717_2113.py  0008_profile_config.py  0009_auto_20190717_2114.py  0010_auto_20190717_2229.py  0011_office_region_code.py  0012_auto_20190717_2233.py  0022_profile_team.py  (+18 more)
backend/factories/: __init__.py  office.py  profile.py  user.py
backend/middleware/: auth.py
backend/migrations/: 0001_initial.py  0002_auto_20190602_2052.py  0002_profile_photo_url.py  0003_identity_is_active.py  0004_profile_department.py  0005_identity_is_admin.py  0006_auto_20190604_1904.py  0007_auto_20190605_0528.py
backend/models/: __init__.py  identity.py  member.py  organization.py  profile.py  user.py
backend/mutations/: login.py
backend/queries/: __init__.py  me.py  offices.py  test_me.py  test_offices.py  test_users.py  users.py
backend/schema/: __init__.py  decimal.py  office.py  profile.py  user.py
backend/utils/: auth.py  google.py
(+231 files in other folders)
