[tool.poetry]
name = "atlas-backend"
version = "0.1.0"
description = ""
authors = ["David Cramer <dcramer@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "atlas"}
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.1"
psycopg2-binary = "^2.7"
itsdangerous = "^1.1"
graphene-django = "^2.2"
gunicorn = "^19.9"
factory-boy = "^2.11"
django-enumfields = "^1.0"
google-auth = "^1.6"
sentry-sdk = "^0.8.1"
requests = "^2.22"
aniso8601 = "^5.0"
graphene-django-optimizer = "^0.4.0"
celery = "^4.3"
django-celery-beat = "^1.5"
redis = "^3.2"
phonenumbers = "^8.10"
django-health-check = "^3.10"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "=19.3b0"
flake8 = "^3.6"
pre-commit = "^1.13"
pytest = "^4.6"
pytest-django = "^3.5"
pytest-xdist = "^1.28"
pytest-timeout = "^1.3"
pytest-cov = "^2.7"
pytest-responses = "^0.4.0"
responses = "^0.10.6"

[tool.poetry.scripts]
atlas = 'atlas.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
